--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="de.mide.zufallsnamenvonwebapi"
-          android:installLocation="auto"
-          android:versionCode="2"
-          android:versionName="1.1 (Februar 2019)" >
-
+          android:installLocation="auto">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
 
     <application android:allowBackup="true"
                  android:icon="@drawable/ic_launcher"
