--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
                  android:usesCleartextTraffic="true">
 
         <activity android:name=".MainActivity"
-                  android:label="@string/title_activity_main" >
+                  android:label="@string/title_activity_main"
+                  android:exported="true" >
 
             <intent-filter>
                 <action   android:name="android.intent.action.MAIN"       />
